test/tests/stages/16_characters_and_strings/invalid_types/assign_to_string_literal.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  string literal("foo")
  =
  string literal("bar")
  ;
  return
  const int(0)
  ;
  }
